# comos

./: .gitignore  .gitmodules  README.md  comos.py  pyproject.toml  setup.py
src/comos/: __init__.py  comos.py  constants.py  helper.py  metrics.py  motif.py  plotting.py  tests.py
